new js simulator

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -189,33 +189,36 @@
   "blocklyBlocks": {
     "forward": "forward",
     "reverse": "reverse",
-    "rigth": "right",
+    "right": "right",
     "left": "left",
     "moveDistance": "Move distance",
-    "moveDistanceTooltip": "Moves to input direction (default == forward) a specified - input distance (cm). <br> Param: dist: the distance to be moved (in cm). direction: the direction to be moved towards.",
+    "moveDistanceTooltip": "Moves to input direction",
     "justMove": "Just move",
-    "justMoveTooltip": "Moves forwards/backwords <br> Param: direction: the direction to be headed to.",
+    "justMoveTooltip": "Moves forwards/backwords.",
     "stopMoving": "Stop moving",
     "stopMovingTooltip": "Robot stops moving",
     "sleep": "Sleep",
-    "sleepTooltip": "Sleeps for an amount of time. <br> Param: time_s: the time (seconds) of sleep.",
+    "sleepTooltip": "Sleeps for an amount of time.",
     "justRotate": "Just rotate",
-    "justRotateTooltip": "Rotates fossbot towards the specified direction id. <br> Param: dir_id: the direction id to rotate to: <br> - counterclockwise: dir_id == 0 <br> - clockwise: dir_id == 1",
-    "rotate9Degrees": "Rotate 90 degrees",
-    "rotate9DegreesTooltip": "Rotates fossbot 90 degrees towards the specified direction id. <br> Param: dir_id: the direction id to rotate 90 degrees: <br> - counterclockwise: dir_id == 0 <br> - clockwise: dir_id == 1",
+    "justRotateTooltip": "Rotates fossbot towards the specified direction.",
+    "rotate90Degrees": "Rotate 90 degrees",
+    "rotate90DegreesTooltip": "Rotates fossbot 90 degrees towards the specified direction.",
+    "rotate45Degrees": "Rotate 45 degrees",
+    "rotate45DegreesTooltip": "Rotates fossbot 45 degrees towards the specified direction.",
+
     "playSound": "Play sound",
-    "playSoundTooltip": "Plays mp3 file specified by input audio_path. <br> Param: audio_path: the path to the mp3 file to be played.",
-    "distance": "Distance counter",
-    "distanceTooltip": "Returns distance of nearest obstacle in cm.",
+    "playSoundTooltip": "Plays mp3 file specified by input audio_path.",
+    "distance": "Obstacle distance",
+    "distanceTooltip": "Returns distance of nearest obstacle",
     "floorSensor": "Floor sensor",
     "floorSensorTooltip": "",
     "leftSensor": "Left sensor",
     "middleSensor": "Middle sensor",
     "rightSensor": "Right sensor",
     "getAcceleration": "Get acceleration",
-    "getAccelerationTooltip": "Gets acceleration of specified axis. <br> Param: axis: the axis to get the acceleration from. <br> Returns: the acceleration of specified axis.",
+    "getAccelerationTooltip": "Gets acceleration of specified axis.",
     "getGyroscope": "Get gyroscope",
-    "getGyroscopeTooltip": "Gets gyroscope of specified axis. <br> Param: axis: the axis to get the gyroscope from. <br> Returns: the gyroscope of specified axis.",
+    "getGyroscopeTooltip": "Gets gyroscope of specified axis.",
     "set": "Set",
     "color": "color",
     "red": "'red'",
@@ -224,9 +227,10 @@
     "violet": "'violet'",
     "cyan": "'cyan'",
     "yellow": "'yellow'",
+    "white": "'white'",
     "closed": "'closed'",
     "setColorTooltip": "Sets led to input color. <br> Param: color: the wanted color.",
-    "lighSensor": "Get light sensor",
+    "lightSensor": "Get light sensor",
     "lightSensorTooltip": "Returns the reading of the light sensor.",
     "noiseDetection": "Get noise detection",
     "noiseDetectionTooltip": "Returns True only if noise is detected."
