draw capability added

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -200,6 +200,9 @@
     "reverse": "reverse",
     "right": "right",
     "left": "left",
+    "true": "True",
+    "false": "False",
+    "draw": "Draw",
     "moveDistance": "Move distance",
     "moveDistanceTooltip": "Moves to input direction",
     "justMove": "Just move",
@@ -230,14 +233,14 @@
     "getGyroscopeTooltip": "Gets gyroscope of specified axis.",
     "set": "Set",
     "color": "color",
-    "red": "'red'",
-    "green": "'green'",
-    "blue": "'white'",
-    "violet": "'violet'",
-    "cyan": "'cyan'",
-    "yellow": "'yellow'",
-    "white": "'white'",
-    "closed": "'closed'",
+    "red": "red",
+    "green": "green",
+    "blue": "white",
+    "violet": "violet",
+    "cyan": "cyan",
+    "yellow": "yellow",
+    "white": "white",
+    "closed": "closed",
     "setColorTooltip": "Sets led to input color. <br> Param: color: the wanted color.",
     "lightSensor": "Get light sensor",
     "lightSensorTooltip": "Returns the reading of the light sensor.",
