--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -200,6 +200,9 @@
     "reverse": "αντίστροφα",
     "right": "δεξιά",
     "left": "αριστερά",
+    "true": "Αληθής",
+    "false": "Ψευδής",
+    "draw": "Σχεδίασε",
     "moveDistance": "Κινήσου για απόσταση",
     "moveDistanceTooltip": "Μετακινείται προς την κατεύθυνση εισόδου.",
     "justMove": "Απλή μετακίνηση",
