role based access

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -59,7 +59,9 @@
     "blocklyEditor": "Blockly Editor",
     "blocksBased": "Blocks based",
     "kindergarten": "Kindergarten",
+    "interactive": "Interactive Mode",
     "simplyBlocks": "Simply Blocks",
+    "interactiveBased": "Camera based control",
     "educationalMaterial": "Educational Material",
     "elementary": "Elementary",
     "fossbotRepository": "FOSSBot Repository",
