--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -59,7 +59,9 @@
     "blocklyEditor": "Blockly Editor",
     "blocksBased": "Βασισμένο σε Blocks",
     "kindergarten": "Νηπιαγωγείο",
+    "interactive": "Διαδραστική Χρήση",
     "simplyBlocks": "Απλά Blocks",
+    "interactiveBased": "Διαδραστική χρήσηε με κάμερα",
     "educationalMaterial": "Εκπαιδευτικό υλικό",
     "elementary": "Δημοτικό",
     "fossbotRepository": "FOSSBot Repository",
