--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -129,7 +129,7 @@
   },
   "authentication": {
     "authLogin": {
-      "rememberDevice": "Rememmber this Device",
+      "rememberDevice": "Remember this Device",
       "forgotPassword": "Forgot Password ?"
     },
     "error": {
