--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -251,7 +251,9 @@
     "userDataUpdateError": "Προέκυψε κάποιο πρόβλημα κατά την ενημέρωση των δεδομένων του χρήστη!",
     "passwordConfirmationError": "Τα πεδία: κωδικός και επιβεβαίωση κωδικού πρέπει να είναι ίδια.",
     "userDataFetchError": "Σφάλμα κατά την ανάκτηση δεδομένων χρήστη.",
-    "projectsFetchError": "Σφάλμα κατά την ανάκτηση πρότζεκτς."
+    "projectsFetchError": "Σφάλμα κατά την ανάκτηση πρότζεκτς.",
+    "projectDeleted": "Το προτζεκτ διαγράφηκε με επιτυχία.",
+    "projectDeleteError": "Προέκυψε πρόβλημα κατά την διαγραφή του πρότζεκτ. Παρακαλώ ξαναδοκιμάστε."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly πρότζεκτς",
