admin panel page

--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -127,6 +127,11 @@
     "light": "Ανοιχτό",
     "dark": "Σκούρο"
   },
+  "roles": {
+    "user": "Χρήστης",
+    "tutor": "Δάσκαλος",
+    "admin": "Διαχειριστής"
+  },
   "authentication": {
     "authLogin": {
       "rememberDevice": "Θυμήσου αυτή τη Συσκευή",
@@ -195,6 +200,12 @@
     "title": "Account Settings",
     "description": "Αυτή είναι η σελίδα των ρυθμίσεων των πληροφοριών του χρήστη"
   },
+  "admin-panel": {
+    "title": "Σελίδα διαχειριστή",
+    "description": "Αυτή είναι η σελίδα του διαχείρισης χρηστών",
+    "usageDescription": "Μπορείτε να διαγράψετε χρήστες ή να επεξεργαστείτε τον ρόλο τους",
+    "noUsersFound": "Δεν βρέθηκαν χρήστες"
+  },
   "blocklyBlocks": {
     "forward": "προς τα εμπρός",
     "reverse": "αντίστροφα",
@@ -253,7 +264,11 @@
     "userDataFetchError": "Σφάλμα κατά την ανάκτηση δεδομένων χρήστη.",
     "projectsFetchError": "Σφάλμα κατά την ανάκτηση πρότζεκτς.",
     "projectDeleted": "Το προτζεκτ διαγράφηκε με επιτυχία.",
-    "projectDeleteError": "Προέκυψε πρόβλημα κατά την διαγραφή του πρότζεκτ. Παρακαλώ ξαναδοκιμάστε."
+    "projectDeleteError": "Προέκυψε πρόβλημα κατά την διαγραφή του πρότζεκτ. Παρακαλώ ξαναδοκιμάστε.",
+    "usersFetchError": "Σφάλμα κατά την ανάκτηση όλων των χρηστών από τη βάση δεδομένων.",
+    "userDeleted": "Ο χρήστης μόλις διαγράφηκε με επιτυχία.",
+    "userDeleteError": "Σφάλμα κατά τη διαγραφή χρήστη. Δοκιμάστε ξανά.",
+    "userRoleInvalid": "Επιλέξατε έναν μη έγκυρο ρόλο χρήστη. Δοκιμάστε ξανά."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly πρότζεκτς",
