--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -127,6 +127,11 @@
     "light": "Light",
     "dark": "Dark"
   },
+  "roles": {
+    "user": "User",
+    "tutor": "Tutor",
+    "admin": "Admin"
+  },
   "authentication": {
     "authLogin": {
       "rememberDevice": "Remember this Device",
@@ -195,6 +200,12 @@
     "title": "Account Settings",
     "description": "This is the user account settings page"
   },
+  "admin-panel": {
+    "title": "Admin Panel",
+    "description": "This is the admin panel page",
+    "usageDescription": "You can delete users or edit their role",
+    "noUsersFound": "No users found"
+  },
   "blocklyBlocks": {
     "forward": "forward",
     "reverse": "reverse",
@@ -254,8 +265,11 @@
     "userDataFetchError": "Error fetching user data.",
     "projectsFetchError": "Error fetching projects.",
     "projectDeleted": "Project was just deleted successfully.",
-    "projectDeleteError": "Error deleting project. Please try again."
-
+    "projectDeleteError": "Error deleting project. Please try again.",
+    "usersFetchError": "Error fetching all usersfrom database.",
+    "userDeleted": "User was just deleted successfully.",
+    "userDeleteError": "Error deleting user. Please try again.",
+    "userRoleInvalid": "You have chosen an invalid user role. Please try again."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly projects",
