stage selector and interactive mode

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -219,7 +219,7 @@
     "rotate90DegreesTooltip": "Rotates fossbot 90 degrees towards the specified direction.",
     "rotate45Degrees": "Rotate 45 degrees",
     "rotate45DegreesTooltip": "Rotates fossbot 45 degrees towards the specified direction.",
-
+    "move_step": "Move step",
     "playSound": "Play sound",
     "playSoundTooltip": "Plays mp3 file specified by input audio_path.",
     "distance": "Obstacle distance",
@@ -247,7 +247,8 @@
     "lightSensor": "Get light sensor",
     "lightSensorTooltip": "Returns the reading of the light sensor.",
     "noiseDetection": "Get noise detection",
-    "noiseDetectionTooltip": "Returns True only if noise is detected."
+    "noiseDetectionTooltip": "Returns True only if noise is detected.",
+    "move_step_description": "Moves the robot for one step."
   },
   "alertMessages": {
     "userDataUpdated": "User data updated successfully!",
