update beta tester role

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -46,6 +46,7 @@
   "demos": "Demos",
   "newProject": "New Project",
   "newProjectDescription": "New Project Description",
+  "betaTester": "Beta Tester",
   "errors": {
     "noCommandError": "Please write a command in the Editor!"
   },
