--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -69,6 +69,10 @@
     "externalLinks": "Εξωτερικοί Σύνδεσμοι",
     "tutorials": "Οδηγοί"
   },
+  "interactive" : {
+    "title": "Διαδραστική Χρήση",
+    "instructions" :"Αυτή η λειτουργία σάς επιτρέπει να αλληλεπιδράτε με το ρομπότ χρησιμοποιώντας χειρονομίες. Η χειρονομία κλειστής γροθιάς (✊) λειτουργεί ως η ενέργεια πίεσης στα εικονικά κουμπιά."
+  },
   "projects-card": {
     "card-title": "FOSSBot πρότζεκτς",
     "subtitle": "Ποιο είδος έργου θα δημιουργήσετε σήμερα;",
