--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -17,6 +17,7 @@
   "firstname": "Όνομα",
   "lastname": "Επίθετο",
   "emailAddress": "Ηλ. Διεύθυνση",
+  "invalidEmail": "Λανθασμένη Ηλ. Διεύθυνση",
   "changeYourPassword": "Άλλαξε τον κωδικό",
   "resetYourPassword": "Επανέφερε τον κωδικό",
   "userProfile": "Προφίλ χρήστη",
@@ -267,6 +268,7 @@
     "move_step_description": "Κινεί το ρομπότ για ένα βήμα."
   },
   "alertMessages": {
+    "userRegisterError": "Σφάλμα κατά την εγγραφή του χρήστη. Δοκιμάστε ξανά.",
     "userDataUpdated": "Τα δεδομένα του χρήστη ενημερώθηκαν με επιτυχία!",
     "userDataUpdateError": "Προέκυψε κάποιο πρόβλημα κατά την ενημέρωση των δεδομένων του χρήστη!",
     "passwordConfirmationError": "Τα πεδία: κωδικός και επιβεβαίωση κωδικού πρέπει να είναι ίδια.",
@@ -274,10 +276,14 @@
     "projectsFetchError": "Σφάλμα κατά την ανάκτηση πρότζεκτς.",
     "projectDeleted": "Το προτζεκτ διαγράφηκε με επιτυχία.",
     "projectDeleteError": "Προέκυψε πρόβλημα κατά την διαγραφή του πρότζεκτ. Παρακαλώ ξαναδοκιμάστε.",
+    "projectUpdated": "Το έργο μόλις ενημερώθηκε με επιτυχία.",
+    "projectUpdatedError": "Το έργο δεν ενημερώθηκε. Δοκιμάστε ξανά.",
     "usersFetchError": "Σφάλμα κατά την ανάκτηση όλων των χρηστών από τη βάση δεδομένων.",
     "userDeleted": "Ο χρήστης μόλις διαγράφηκε με επιτυχία.",
     "userDeleteError": "Σφάλμα κατά τη διαγραφή χρήστη. Δοκιμάστε ξανά.",
-    "userRoleInvalid": "Επιλέξατε έναν μη έγκυρο ρόλο χρήστη. Δοκιμάστε ξανά."
+    "userRoleInvalid": "Επιλέξατε έναν μη έγκυρο ρόλο χρήστη. Δοκιμάστε ξανά.",
+    "codeRunning": "Ο κώδικάς σας μόλις άρχισε να εκτελείται.",
+    "codeStopped": "Ο κώδικάς σας μόλις σταμάτησε να εκτελείται."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly πρότζεκτς",
