--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -283,7 +283,9 @@
     "userDeleteError": "Σφάλμα κατά τη διαγραφή χρήστη. Δοκιμάστε ξανά.",
     "userRoleInvalid": "Επιλέξατε έναν μη έγκυρο ρόλο χρήστη. Δοκιμάστε ξανά.",
     "codeRunning": "Ο κώδικάς σας μόλις άρχισε να εκτελείται.",
-    "codeStopped": "Ο κώδικάς σας μόλις σταμάτησε να εκτελείται."
+    "codeStopped": "Ο κώδικάς σας μόλις σταμάτησε να εκτελείται.",
+    "emptyCodeBlockly": "Ο κωδικός σας είναι κενός. Προσθέστε μερικά μπλοκ πριν κάνετε κλικ στο κουμπί αναπαραγωγής.",
+    "emptyCodeMonaco": "Ο κωδικός σας είναι κενός. Προσθέστε τουλάχιστον μία εντολή πριν κάνετε κλικ στο κουμπί αναπαραγωγής."
   },
   "accountSettings": {
     "blocklyProjects": "Blockly πρότζεκτς",
