user menu translations added

--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -21,6 +21,9 @@
   "changeYourPassword": "Change your password",
   "resetYourPassword": "Reset your password",
   "userProfile": "User Profile",
+  "myProfile": "My Profile",
+  "adminPanel": "Admin Panel",
+  "manageUsers": "Manage users",
   "foss": "FOSS",
   "bot": "Bot",
   "platform": "Platform",
