--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -21,6 +21,9 @@
   "changeYourPassword": "Άλλαξε τον κωδικό",
   "resetYourPassword": "Επανέφερε τον κωδικό",
   "userProfile": "Προφίλ χρήστη",
+  "myProfile": "Το προφίλ μου",
+  "adminPanel": "Πίνακας διαχειριστή",
+  "manageUsers": "Διαχείριση χρηστών",
   "foss": "FOSS",
   "bot": "Bot",
   "platform": "Πλατφόρμα",
