--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -91,8 +91,17 @@
   "c2a2": {
     "description": "Ας ξεκινήσουμε το ταξίδι σας μαζί μας, κατασκευάστε τη δική σας εφαρμογή χρησιμοποιώντας τους τομείς ή τον φυσικό κώδικα Python."
   },
+  "general_landing": {
+    "fossbot": "Το FOSSBot είναι ένα ρομπότ ανοιχτού κώδικα και ανοιχτού σχεδιασμού DIY που έχει αναπτυχθεί από το Ελληνικό Ελεύθερο Λογισμικό Ανοιχτού Κώδικα (ΕΕΛΑΚ) και το Χαροκόπειο Πανεπιστήμιο Αθηνών για εκπαιδευτικούς σκοπούς. Το ρομπότ δεν έρχεται μόνο του, αλλά περιλαμβάνει πολλαπλές λύσεις λογισμικού και συστημάτων που παρέχουν μια ολιστική προσέγγιση για την εκπαίδευση STEM σε όλα τα εκπαιδευτικά επίπεδα.",
+    "platform": "Η πλατφόρμα FOSSBot είναι μια πλατφόρμα που βασίζεται στον ιστό που παρέχει ένα σύνολο εργαλείων για τη δημιουργία, την επεξεργασία και την εκτέλεση προγραμμάτων για το ρομπότ FOSSBot. Η πλατφόρμα έχει σχεδιαστεί για να είναι φιλική προς το χρήστη και να παρέχει μια απρόσκοπτη εμπειρία στους χρήστες κάθε ηλικίας και υπόβαθρου».",
+    "whatis": "Τι είναι το FOSSBot;",
+    "whatis_platform": "Τι είναι η πλατφόρμα FOSSBot;",
+    "github": "To FOSSBot είναι ανοιχτού κώδικα και είναι διαθέσιμο στο GitHub. Μπορείτε να κατεβάσετε τα σχέδια τρισδιάστατης εκτύπωσης και τις οδηγίες για να δημιουργήσετε το δικό σας FOSSBot. Επιπλέον, μπορείτε να συμβάλετε στην ανάπτυξη της πλατφόρμας υποβάλλοντας αναφορές σφαλμάτων, αιτήματα για λειτουργίες, ή εισφορές κωδικού."
+  },
   "card-fossbot": {
-    "fossbot": "Το FOSSBot είναι ένα ανοικτού κώδικα και σχεδιασμού ρομπότ DIY που έχει αναπτυχθεί από το Greek Free and Open Source Software (GFOSS) και το Πανεπιστήμιο Χαροκοπίου (HUA) για εκπαιδευτικούς σκοπούς. Το ρομπότ δεν έρχεται μόνο του, αλλά αποτελείται από πολλές λογισμικές και συστηματικές λύσεις που παρέχουν μια ολοκληρωμένη προσέγγιση για την εκπαίδευση STEM σε όλα τα επίπεδα εκπαίδευσης."
+    "about_blockly" : "Μπορείτε να δημιουργήσετε προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τον επεξεργαστή Blockly. Το Blockly είναι μια οπτική γλώσσα προγραμματισμού που επιτρέπει στους χρήστες να δημιουργούν προγράμματα σύροντας και αποθέτοντας μπλοκ που αντιπροσωπεύουν κώδικα.",
+    "about_monaco" : "Ο Monaco editor είναι ένας επεξεργαστής που βασίζεται σε κείμενο που επιτρέπει στους χρήστες να γράφουν προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τη γλώσσα προγραμματισμού Python. Ο επεξεργαστής παρέχει μια πραγματική εμπειρία κωδικοποίησης και είναι ιδανικός για χρήστες που είναι εξοικειωμένοι με τον προγραμματισμό βάσει κειμένου Γλώσσες.",
+    "about_simulator" : "Έχουμε αναπτύξει έναν προσομοιωτή που επιτρέπει στους χρήστες να δοκιμάσουν τα προγράμματά τους για το ρομπότ FOSSBot χωρίς να χρειάζονται πρόσβαση στο φυσικό ρομπότ. Ο προσομοιωτής παρέχει ένα εικονικό περιβάλλον όπου οι χρήστες μπορούν να εκτελέσουν και να διορθώσουν τα προγράμματά τους πριν τα αναπτύξουν στο ρομπότ. "
   },
   "title-fossbot": {
     "introduceFossbot": "Παρουσίαση του FOSSBot"
