--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -96,13 +96,13 @@
     "description": "Let's start your journey with us, build your own application using blocks or native Python code."
   },
   "general_landing": {
-    "fossbot": "The FOSSBot is an open source and open design DIY robot that has been developed by Greek Free and Open Source Software (GFOSS) and Harokopio University of Athens (HUA) for educational purposes. The robot does not come alone, but comprises multiple software and system solutions that provide a holistic approach for STEM education at all educational levels.",
-    "platform": "The FOSSBot platform is a web-based platform that provides a set of tools for creating, editing, and running programs for the FOSSBot robot. The platform is designed to be user-friendly and to provide a seamless experience for users of all ages and backgrounds.",
+    "fossbot": "FOSSBot is an open source and open design DIY robot that has been developed by Greek Free and Open Source Software (GFOSS) and Harokopio University of Athens (HUA) for educational purposes. The robot does not come alone, but comprises multiple software and system solutions that provide a holistic approach for STEM education at all educational levels.",
+    "platform": "FOSSBot platform is a web-based platform that provides a set of tools for creating, editing, and running programs for the FOSSBot robot. The platform is designed to be user-friendly and to provide a seamless experience for users of all ages and backgrounds.",
     "whatis": "What is FOSSBot?",
     "whatis_platform": "What is FOSSBot Platform?",
-    "github": "The FOSSBot is open source and available on GitHub. You can download the 3D print designs and instructions to create your own FOSSBot. Additionally, you can contribute to the development of the platform by submitting bug reports, feature requests, or code contributions."
-
-  },
+    "github": "You can download the 3D print designs and instructions to create your own FOSSBot. Additionally, you can contribute to the development of the platform by submitting bug reports, feature requests, or code contributions.",
+    "fossbot_text": "The FOSSBot is an affordable, customizable robot, built with low-cost electronics and 3D-printable parts. It uses a Raspberry Pi Zero for internet connectivity and sensor support, enabling tasks like robot control and computer vision. The plastic parts, made from durable PETG filament, house all electronic components securely. Key features include a pencil holder for drawing, side spoilers for wheel protection, and a LEGO-compatible top cover. Electronics include gyroscope, accelerometer, odometers, wheel motors, RGB LED, and various sensors, making it versatile and repairable for under $200. The software stack, running on Raspbian OS, uses Python and supports microservices, Google Blockly, and Python Flask, offering modes for no-coding, block-based coding, and Python programming. This flexibility makes FOSSBot ideal for educational purposes, combining easy assembly with advanced programming capabilities." 
+   },
   "card-fossbot": {
     "about_blockly" : "You can create programs for the FOSSBot robot using the Blockly editor. Blockly is a visual programming language that allows users to create programs by dragging and dropping blocks that represent code.",
     "about_monaco" : "The Monaco editor is a text-based editor that allows users to write programs for the FOSSBot robot using the Python programming language. The editor provides a real coding experience and is ideal for users who are familiar with text-based programming languages.",
