--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -74,9 +74,9 @@
     "externalLinks": "Εξωτερικοί Σύνδεσμοι",
     "tutorials": "Οδηγοί"
   },
-  "interactive" : {
+  "interactive": {
     "title": "Διαδραστική Χρήση",
-    "instructions" :"Αυτή η λειτουργία σάς επιτρέπει να αλληλεπιδράτε με το ρομπότ χρησιμοποιώντας χειρονομίες. Η χειρονομία κλειστής γροθιάς (✊) λειτουργεί ως η ενέργεια πίεσης στα εικονικά κουμπιά."
+    "instructions": "Αυτή η λειτουργία σάς επιτρέπει να αλληλεπιδράτε με το ρομπότ χρησιμοποιώντας χειρονομίες. Η χειρονομία κλειστής γροθιάς (✊) λειτουργεί ως η ενέργεια πίεσης στα εικονικά κουμπιά."
   },
   "projects-card": {
     "card-title": "FOSSBot πρότζεκτς",
@@ -102,13 +102,17 @@
     "whatis": "Τι είναι το FOSSBot;",
     "whatis_platform": "Τι είναι η πλατφόρμα FOSSBot;",
     "github": "Μπορείτε να κατεβάσετε τα σχέδια τρισδιάστατης εκτύπωσης και τις οδηγίες για να δημιουργήσετε το δικό σας FOSSBot. Επιπλέον, μπορείτε να συμβάλετε στην ανάπτυξη της πλατφόρμας υποβάλλοντας αναφορές σφαλμάτων, αιτήματα για λειτουργίες, ή εισφορές κωδικού.",
-    "fossbot_text" : "Το FOSSBot είναι ένα προσιτό, προσαρμόσιμο ρομπότ, κατασκευασμένο με χαμηλού κόστους ηλεκτρονικά και 3D-εκτυπώσιμα μέρη. Χρησιμοποιεί Raspberry Pi Zero για συνδεσιμότητα στο διαδίκτυο και υποστήριξη αισθητήρων, επιτρέποντας εργασίες όπως ο έλεγχος ρομπότ και η όραση υπολογιστή. Τα πλαστικά μέρη, κατασκευασμένα από ανθεκτικό νήμα PETG, φιλοξενούν όλα τα ηλεκτρονικά εξαρτήματα με ασφάλεια. Κύρια χαρακτηριστικά περιλαμβάνουν θήκη για μολύβι, πλευρικούς προφυλακτήρες και κάλυμμα συμβατό με LEGO. Τα ηλεκτρονικά περιλαμβάνουν γυροσκόπιο, επιταχυνσιόμετρο, οδόμετρα, κινητήρες τροχών, RGB LED και διάφορους αισθητήρες, καθιστώντας το ευέλικτο και επισκευάσιμο με κόστος κάτω από 200 USD. Η στοίβα λογισμικού, που τρέχει σε Raspbian OS, χρησιμοποιεί Python και υποστηρίζει μικροϋπηρεσίες, Google Blockly και Python Flask, προσφέροντας τρόπους λειτουργίας για χωρίς κωδικοποίηση, κωδικοποίηση με μπλοκ και προγραμματισμό Python. Αυτή η ευελιξία καθιστά το FOSSBot ιδανικό για εκπαιδευτικούς σκοπούς, συνδυάζοντας εύκολη συναρμολόγηση με προηγμένες δυνατότητες προγραμματισμού.",
+    "fossbot_text": "Το FOSSBot είναι ένα προσιτό, προσαρμόσιμο ρομπότ, κατασκευασμένο με χαμηλού κόστους ηλεκτρονικά και 3D-εκτυπώσιμα μέρη. Χρησιμοποιεί Raspberry Pi Zero για συνδεσιμότητα στο διαδίκτυο και υποστήριξη αισθητήρων, επιτρέποντας εργασίες όπως ο έλεγχος ρομπότ και η όραση υπολογιστή. Τα πλαστικά μέρη, κατασκευασμένα από ανθεκτικό νήμα PETG, φιλοξενούν όλα τα ηλεκτρονικά εξαρτήματα με ασφάλεια. Κύρια χαρακτηριστικά περιλαμβάνουν θήκη για μολύβι, πλευρικούς προφυλακτήρες και κάλυμμα συμβατό με LEGO. Τα ηλεκτρονικά περιλαμβάνουν γυροσκόπιο, επιταχυνσιόμετρο, οδόμετρα, κινητήρες τροχών, RGB LED και διάφορους αισθητήρες, καθιστώντας το ευέλικτο και επισκευάσιμο με κόστος κάτω από 200 USD. Η στοίβα λογισμικού, που τρέχει σε Raspbian OS, χρησιμοποιεί Python και υποστηρίζει μικροϋπηρεσίες, Google Blockly και Python Flask, προσφέροντας τρόπους λειτουργίας για χωρίς κωδικοποίηση, κωδικοποίηση με μπλοκ και προγραμματισμό Python. Αυτή η ευελιξία καθιστά το FOSSBot ιδανικό για εκπαιδευτικούς σκοπούς, συνδυάζοντας εύκολη συναρμολόγηση με προηγμένες δυνατότητες προγραμματισμού.",
     "overview": "Επισκόπηση"
-},
+  },
+  "device_page": {
+    "errorMessage": "Η πλατφόρμα είναι διαθέσιμη μόνο απο Desktop και Tablet",
+    "suggestion": "Παρακαλώ συνδεθέιτε σε μία απο αυτές τις συσκευές για πλήρη εμπειρία χρήσης της σελίδας"
+  },
   "card-fossbot": {
-    "about_blockly" : "Μπορείτε να δημιουργήσετε προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τον επεξεργαστή Blockly. Το Blockly είναι μια οπτική γλώσσα προγραμματισμού που επιτρέπει στους χρήστες να δημιουργούν προγράμματα σύροντας και αποθέτοντας μπλοκ που αντιπροσωπεύουν κώδικα.",
-    "about_monaco" : "Ο Monaco editor είναι ένας επεξεργαστής που βασίζεται σε κείμενο που επιτρέπει στους χρήστες να γράφουν προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τη γλώσσα προγραμματισμού Python. Ο επεξεργαστής παρέχει μια πραγματική εμπειρία κωδικοποίησης και είναι ιδανικός για χρήστες που είναι εξοικειωμένοι με τον προγραμματισμό βάσει κειμένου Γλώσσες.",
-    "about_simulator" : "Έχουμε αναπτύξει έναν προσομοιωτή που επιτρέπει στους χρήστες να δοκιμάσουν τα προγράμματά τους για το ρομπότ FOSSBot χωρίς να χρειάζονται πρόσβαση στο φυσικό ρομπότ. Ο προσομοιωτής παρέχει ένα εικονικό περιβάλλον όπου οι χρήστες μπορούν να εκτελέσουν και να διορθώσουν τα προγράμματά τους πριν τα αναπτύξουν στο ρομπότ. "
+    "about_blockly": "Μπορείτε να δημιουργήσετε προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τον επεξεργαστή Blockly. Το Blockly είναι μια οπτική γλώσσα προγραμματισμού που επιτρέπει στους χρήστες να δημιουργούν προγράμματα σύροντας και αποθέτοντας μπλοκ που αντιπροσωπεύουν κώδικα.",
+    "about_monaco": "Ο Monaco editor είναι ένας επεξεργαστής που βασίζεται σε κείμενο που επιτρέπει στους χρήστες να γράφουν προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τη γλώσσα προγραμματισμού Python. Ο επεξεργαστής παρέχει μια πραγματική εμπειρία κωδικοποίησης και είναι ιδανικός για χρήστες που είναι εξοικειωμένοι με τον προγραμματισμό βάσει κειμένου Γλώσσες.",
+    "about_simulator": "Έχουμε αναπτύξει έναν προσομοιωτή που επιτρέπει στους χρήστες να δοκιμάσουν τα προγράμματά τους για το ρομπότ FOSSBot χωρίς να χρειάζονται πρόσβαση στο φυσικό ρομπότ. Ο προσομοιωτής παρέχει ένα εικονικό περιβάλλον όπου οι χρήστες μπορούν να εκτελέσουν και να διορθώσουν τα προγράμματά τους πριν τα αναπτύξουν στο ρομπότ. "
   },
   "title-fossbot": {
     "introduceFossbot": "Παρουσίαση του FOSSBot"
