--- a/front-end/src/utils/languages/en.json
+++ b/front-end/src/utils/languages/en.json
@@ -74,9 +74,9 @@
     "externalLinks": "External Links",
     "tutorials": "Tutorials"
   },
-  "interactive" : {
+  "interactive": {
     "title": "Interactive Mode",
-    "instructions" :"This mode allows you to interact with the robot using hand gestures. The closed fist (✊) gesture acts as the press action ontvirtual buttons."
+    "instructions": "This mode allows you to interact with the robot using hand gestures. The closed fist (✊) gesture acts as the press action ontvirtual buttons."
   },
   "projects-card": {
     "card-title": "FOSSBot Projects",
@@ -102,13 +102,17 @@
     "whatis": "What is FOSSBot?",
     "whatis_platform": "What is FOSSBot Platform?",
     "github": "You can download the 3D print designs and instructions to create your own FOSSBot. Additionally, you can contribute to the development of the platform by submitting bug reports, feature requests, or code contributions.",
-    "fossbot_text": "The FOSSBot is an affordable, customizable robot, built with low-cost electronics and 3D-printable parts. It uses a Raspberry Pi Zero for internet connectivity and sensor support, enabling tasks like robot control and computer vision. The plastic parts, made from durable PETG filament, house all electronic components securely. Key features include a pencil holder for drawing, side spoilers for wheel protection, and a LEGO-compatible top cover. Electronics include gyroscope, accelerometer, odometers, wheel motors, RGB LED, and various sensors, making it versatile and repairable for under $200. The software stack, running on Raspbian OS, uses Python and supports microservices, Google Blockly, and Python Flask, offering modes for no-coding, block-based coding, and Python programming. This flexibility makes FOSSBot ideal for educational purposes, combining easy assembly with advanced programming capabilities." ,
+    "fossbot_text": "The FOSSBot is an affordable, customizable robot, built with low-cost electronics and 3D-printable parts. It uses a Raspberry Pi Zero for internet connectivity and sensor support, enabling tasks like robot control and computer vision. The plastic parts, made from durable PETG filament, house all electronic components securely. Key features include a pencil holder for drawing, side spoilers for wheel protection, and a LEGO-compatible top cover. Electronics include gyroscope, accelerometer, odometers, wheel motors, RGB LED, and various sensors, making it versatile and repairable for under $200. The software stack, running on Raspbian OS, uses Python and supports microservices, Google Blockly, and Python Flask, offering modes for no-coding, block-based coding, and Python programming. This flexibility makes FOSSBot ideal for educational purposes, combining easy assembly with advanced programming capabilities.",
     "overview": "Overview"
   },
+  "device_page": {
+    "errorMessage": "This platform is available only on Tablet and Desktop",
+    "suggestion":"Please connect from these devices to have 100% user experience"
+  },
   "card-fossbot": {
-    "about_blockly" : "You can create programs for the FOSSBot robot using the Blockly editor. Blockly is a visual programming language that allows users to create programs by dragging and dropping blocks that represent code.",
-    "about_monaco" : "The Monaco editor is a text-based editor that allows users to write programs for the FOSSBot robot using the Python programming language. The editor provides a real coding experience and is ideal for users who are familiar with text-based programming languages.",
-    "about_simulator" : "We have developed a simulator that allows users to test their programs for the FOSSBot robot without needing access to the physical robot. The simulator provides a virtual environment where users can run and debug their programs before deploying them to the robot."
+    "about_blockly": "You can create programs for the FOSSBot robot using the Blockly editor. Blockly is a visual programming language that allows users to create programs by dragging and dropping blocks that represent code.",
+    "about_monaco": "The Monaco editor is a text-based editor that allows users to write programs for the FOSSBot robot using the Python programming language. The editor provides a real coding experience and is ideal for users who are familiar with text-based programming languages.",
+    "about_simulator": "We have developed a simulator that allows users to test their programs for the FOSSBot robot without needing access to the physical robot. The simulator provides a virtual environment where users can run and debug their programs before deploying them to the robot."
   },
 
   "title-fossbot": {
