--- a/front-end/src/utils/languages/gr.json
+++ b/front-end/src/utils/languages/gr.json
@@ -107,7 +107,8 @@
   },
   "device_page": {
     "errorMessage": "Η πλατφόρμα είναι διαθέσιμη μόνο απο Desktop και Tablet",
-    "suggestion": "Παρακαλώ συνδεθέιτε σε μία απο αυτές τις συσκευές για πλήρη εμπειρία χρήσης της σελίδας"
+    "suggestion": "Παρακαλώ συνδεθέιτε σε μία απο αυτές τις συσκευές για πλήρη εμπειρία χρήσης της σελίδας",
+    "title": "Παρακαλώ δοκιμάστε άλλη συσκευή"
   },
   "card-fossbot": {
     "about_blockly": "Μπορείτε να δημιουργήσετε προγράμματα για το ρομπότ FOSSBot χρησιμοποιώντας τον επεξεργαστή Blockly. Το Blockly είναι μια οπτική γλώσσα προγραμματισμού που επιτρέπει στους χρήστες να δημιουργούν προγράμματα σύροντας και αποθέτοντας μπλοκ που αντιπροσωπεύουν κώδικα.",
